Fixed overflow scrolling for left nav on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,9 +49,10 @@ body{
 /* #leftNav is on education links page, used for easy nav through political issues displayed in #dataTable */
 #leftNav {
 	position:fixed;
-	top:0px;
-	left:0px;
-	height:100%;
+	top:0;
+	bottom:0;
+	left:0;
+
 	width:0px;
 	overflow:hidden;
 	overflow-y:auto;
